# abcsql

abcsql-main/: .gitignore  Cargo.toml  README.md
abcsql-main/examples/chrisdate/db/: db  snap.00000000000031BC
abcsql-main/examples/personkonto/db/: db  snap.000000000000B32A
abcsql-main/examples/personkonto/offdb/: dump.csv  testcsv.command
abcsql-main/examples/recipes/db/: db  snap.000000000014422D
abcsql-main/src/abcsql/applic_folder/: csvio.rs  dump_sql.rs  go_exec.rs  go_talk.rs  orderby.rs  show_select.rs
